# github-code-research

./: .env.example  .gitignore  CHANGELOG.md  DEMO_RESULTS.md  GET_GITHUB_TOKEN.md  INSTALLATION.md  INSTALLATION_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  PUBLISH_TO_GITHUB.md  QUICK_START_GUIDE.md  README.md  STRUCTURE.txt  TESTING_GUIDE.md  TEST_RESULTS.md  USAGE_EXAMPLES.md  config.example.json  push-to-github.sh  pyproject.toml  quickstart.sh  test_integration.py
src/github_code_research/: __init__.py  __main__.py  server.py
src/github_code_research/config/: settings.py
src/github_code_research/github/: __init__.py  auth.py  client.py  rate_limiter.py
src/github_code_research/parsers/: __init__.py  base.py  factory.py  javascript_parser.py  pagerank.py  python_parser.py  typescript_parser.py
src/github_code_research/security/: __init__.py  secret_scanner.py
src/github_code_research/tools/: __init__.py  check_license.py  extract_function.py  find_compatible_patterns.py  find_simpler_alternative.py  find_usage_examples.py  get_implementation_guide.py  repo_map.py  search_patterns.py  validate_code_snippet.py
src/github_code_research/utils/: cache.py  errors.py  logger.py
tests/: __init__.py  conftest.py  test_github_client.py
tests/test_parsers/: test_tree_sitter.py
tests/test_tools/: test_search_patterns.py
